--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,7 +9,9 @@
                 "build",
                 "${workspaceFolder}/EightPuzzle/EightPuzzle.csproj",
                 "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
+                "/consoleloggerparameters:NoSummary",
+                "-c",
+                "Release"
             ],
             "problemMatcher": "$msCompile"
         },
